--- a/Asignacion1/WebContent/index.html
+++ b/Asignacion1/WebContent/index.html
@@ -15,10 +15,10 @@
         var registerButton = document.getElementById("register");
         var loginButton = document.getElementById("login");
         registerButton.onclick = () =>{
-            window.location.href = "https://morning-oasis-65605.herokuapp.com/html/register.html";
+            window.location.href = "https://guarded-escarpment-77007.herokuapp.com/html/register.html";
         }
         loginButton.onclick = () =>{
-            window.location.href = "https://morning-oasis-65605.herokuapp.com/html/login.html";
+            window.location.href = "https://guarded-escarpment-77007.herokuapp.com/html/login.html";
         }
     </script>
 </html>
