--- a/Asignacion1/WebContent/html/login.html
+++ b/Asignacion1/WebContent/html/login.html
@@ -13,25 +13,21 @@
             <label class="form-label" for="password" style="color: aquamarine;">Password</label>
             <input class="form-input" name="password" type="password" placeholder="Password...">
         </form>
-        <button id="loginButton" style="position:absolute;left: 50%;top: 30%;">Login</button>
+        <button id="loginButton" style="position:absolute;left: 65%;top: 30%;">Login</button>
         <script>
             var form = document.getElementById("LoginForm");
             var button = document.getElementById("loginButton");
             var error = document.getElementById("ErrorMessage");
             function login(formData){
-                fetch("https://morning-oasis-65605.herokuapp.com/LoginServlet", {
+                fetch("https://guarded-escarpment-77007.herokuapp.com/LoginServlet", {
                     method:'POST',
-                    body:formData,
-                    credentials:'include',
-                    headers: {
-                        'SameSite':'None'
-                    }
+                    body:formData
                 })
                 .then(response => response.json())
                 .then((response) => {
                     console.log(response);
                     if (response.message == "OK"){
-                        window.location.href = "https://morning-oasis-65605.herokuapp.com/html/" + response.redirectLocation + ".html";
+                        window.location.href = "https://guarded-escarpment-77007.herokuapp.com/html/" + response.redirectLocation + ".html";
                     }
                     else if (response.message == "PasswordError"){
                         error.textContent = "Password doesn't match any records.";
